<resources>
    <string name="app_name">Yolijoli</string>
    <!-- TODO: tab string -->
    <string name="tab_category">카테고리</string>
    <string name="tab_my">My</string>
    <string name="tab_search">검색</string>
    <string name="tab_community">커뮤니티</string>

    <!-- TODO: resgister string -->
    <string name="hint_id">ID를 입력하세요</string>
    <string name="hint_password">패스워드를 입력하세요</string>
    <string name="hint_name">성명을 입력하세요</string>
    <string name="hint_mobileNO">휴대폰번호를 입력하세요</string>
    <string name="hint_email">이메일을 입력하세요</string>
    <string name="btn_login">로그인</string>
    <string name="btn_register">회원가입</string>
    <string name="btn_logout">로그아웃</string>
    <string name="register">회원가입</string>
    <string name="comit">확인</string>
    <string name="answer">답변</string>
    <string name="cancel">취소</string>
    <string name="phone_number">휴대폰 번호</string>
    <string name="femaile">여</string>
    <string name="qustion">질문</string>
    <string name="male">남</string>
    <string name="name">이름</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="check_passwd">비밀번호 확인</string>
    <string name="register_commit">가입</string>
    <string name="born_hint">생년월일 (Click)</string>

    <string name="permission_1">[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="permission_2">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다.</string>
    <!-- TODO: check string -->
    <string name="check1_content">
        ①(‘http://vudghk0000.iwinv.net/’이하 ‘DEBTOLEE’) 은(는) 정보주체로부터 개인정보를 수집할 때 동의 받은 개인정보 보유․이용기간 또는 법령에 따른 개인정보 보유․이용기간 내에서 개인정보를 처리․보유합니다.
        \n② 구체적인 개인정보 처리 및 보유 기간은 다음과 같습니다.
        \n☞ 아래 예시를 참고하여 개인정보 처리업무와 개인정보 처리업무에 대한 보유기간 및 관련 법령, 근거 등을 기재합니다.
        \n(예시)- 고객 가입 및 관리 : 서비스 이용계약 또는 회원가입 해지시까지, 다만 채권․채무관계 잔존시에는 해당 채권․채무관계 정산시까지
        \n- 전자상거래에서의 계약․청약철회, 대금결제, 재화 등 공급기록 : 5년</string>
    <string name="check1_title">개인정보의 처리 및 보유 기간</string>
    <string name="check2_content">
        ① 정보주체는 DEBTOLEE(‘http://vudghk0000.iwinv.net/’이하 ‘DEBTOLEE) 에 대해 언제든지 다음 각 호의 개인정보 보호 관련 권리를 행사할 수 있습니다.
        \n1. 개인정보 열람요구
        \n2. 오류 등이 있을 경우 정정 요구
        \n3. 삭제요구
        \n4. 처리정지 요구</string>
    <string name="check2_title">정보주체와 법정대리인의 권리·의무 및 그 행사방법 이용자는 개인정보주체로써 다음과 같은 권리를 행사할 수 있습니다.</string>
    <string name="check3_content">
      ① (\'http://vudghk0000.iwinv.net/\'이하 \'DEBTOLEE\')은(는) 다음의 개인정보 항목을 처리하고 있습니다.
        \n서비스제공
        \n- 필수항목 : 이메일, 휴대전화번호, 자택주소, 비밀번호 질문과 답, 비밀번호, 로그인ID, 성별, 생년월일, 이름, 직책, 부서, 회사명, 직업, 서비스 이용 기록
        \n- 선택항목 :
    </string>
    <string name="check3_title">처리하는 개인정보의 항목 작성</string>
    <string name="check4_content">
    -파기절차
    \n이용자가 입력한 정보는 목적 달성 후 별도의 DB에 옮겨져(종이의 경우 별도의 서류) 내부 방침 및 기타 관련 법령에 따라 일정기간 저장된 후 혹은 즉시 파기됩니다. 이 때, DB로 옮겨진 개인정보는 법률에 의한 경우가 아니고서는 다른 목적으로 이용되지 않습니다.
    \n
    \n-파기기한
    \n이용자의 개인정보는 개인정보의 보유기간이 경과된 경우에는 보유기간의 종료일로부터 5일 이내에, 개인정보의 처리 목적 달성, 해당 서비스의 폐지, 사업의 종료 등 그 개인정보가 불필요하게 되었을 때에는 개인정보의 처리가 불필요한 것으로 인정되는 날로부터 5일 이내에 그 개인정보를 파기합니다.
    </string>
    <string name="check4_title">개인정보의 파기(\'DEBTOLEE\')은(는) 원칙적으로 개인정보 처리목적이 달성된 경우에는 지체없이 해당 개인정보를 파기합니다. 파기의 절차, 기한 및 방법은 다음과 같습니다.</string>
    <string name="check5_content">
        DEBTOLEE 은 정보주체의 이용정보를 저장하고 수시로 불러오는 ‘쿠키’를 사용하지 않습니다.
    </string>
    <string name="check5_title">개인정보 자동 수집 장치의 설치•운영 및 거부에 관한 사항</string>
    <string name="check6_content">
      ① DEBTOLEE(‘http://vudghk0000.iwinv.net/’이하 ‘DEBTOLEE) 은(는) 개인정보 처리에 관한 업무를 총괄해서 책임지고, 개인정보 처리와 관련한 정보주체의 불만처리 및 피해구제 등을 위하여 아래와 같이 개인정보 보호책임자를 지정하고 있습니다.
        \n▶ 개인정보 보호책임자 성명 :이평화 직책 :개인 직급 :개인 연락처 :01031317937, debtolee@gmail.com,
        \n※ 개인정보 보호 담당부서로 연결됩니다.
        \n② 정보주체께서는 DEBTOLEE(‘http://vudghk0000.iwinv.net/’이하 ‘DEBTOLEE) 의 서비스(또는 사업)을 이용하시면서 발생한 모든 개인정보 보호 관련 문의, 불만처리, 피해구제 등에 관한 사항을 개인정보 보호책임자 및 담당부서로 문의하실 수 있습니다. DEBTOLEE(‘http://vudghk0000.iwinv.net/’이하 ‘DEBTOLEE) 은(는) 정보주체의 문의에 대해 지체 없이 답변 및 처리해드릴 것입니다.
    </string>
    <string name="check6_title"> 개인정보 보호책임자 작성</string>
    <string name="check7_content">
        ①이 개인정보처리방침은 시행일로부터 적용되며, 법령 및 방침에 따른 변경내용의 추가, 삭제 및 정정이 있는 경우에는 변경사항의 시행 7일 전부터 공지사항을 통하여 고지할 것입니다.
    </string>
    <string name="check7_title">개인정보 처리방침 변경</string>
    <string name="check8_content">
        1. 비인가자에 대한 출입 통제
        \n개인정보를 보관하고 있는 물리적 보관 장소를 별도로 두고 이에 대해 출입통제 절차를 수립, 운영하고 있습니다.
    </string>
    <string name="check8_title">개인정보의 안전성 확보 조치 (\'DEBTOLEE\')은(는) 개인정보보호법 제29조에 따라 다음과 같이 안전성 확보에 필요한 기술적/관리적 및 물리적 조치를 하고 있습니다.</string>
    <string name="privacy_check">개인정보 처리 약관 동의</string>
    <string name="checkAll">모든 약관에 동의합니다</string>
    <string name="next">다음</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="channel_name">channel_yolijoli</string>
    <string name="channel_description">yolijoli</string>


</resources>