<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckPersonal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/privacy_check" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next" />

        <CheckBox
            android:id="@+id/checkAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkAll" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/check1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/check1_title" />

                <kr.co.prnd.readmore.ReadMoreTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:ellipsize="end"
                    android:text="@string/check1_content" />

                <CheckBox
                    android:id="@+id/check2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/check2_title" />

                <kr.co.prnd.readmore.ReadMoreTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:ellipsize="end"
                    android:text="@string/check2_content" />

                <CheckBox
                    android:id="@+id/check3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/check3_title" />

                <kr.co.prnd.readmore.ReadMoreTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:ellipsize="end"
                    android:text="@string/check3_content" />

                <CheckBox
                    android:id="@+id/check4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/check4_title" />

                <kr.co.prnd.readmore.ReadMoreTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:ellipsize="end"
                    android:text="@string/check4_content" />

                <CheckBox
                    android:id="@+id/check5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/check5_title" />

                <kr.co.prnd.readmore.ReadMoreTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:ellipsize="end"
                    android:text="@string/check5_content" />

                <CheckBox
                    android:id="@+id/check6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/check6_title" />

                <kr.co.prnd.readmore.ReadMoreTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/check6_content" />

                <CheckBox
                    android:id="@+id/check7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/check7_title" />

                <kr.co.prnd.readmore.ReadMoreTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/check7_content" />

                <CheckBox
                    android:id="@+id/check8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/check8_title" />

                <kr.co.prnd.readmore.ReadMoreTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/check8_content" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>